Project has been corrected accordingly to Volodya's comments. From the function comparePositions deleted +1 and -1. For teamHeader has been made a distinct function. Constants have been made for Enter number of keyCode. Components TodoCalendar and TableCells have been corrected for more readability. Their functionality have been extended.

--- a/src/styles/_calendar.scss
+++ b/src/styles/_calendar.scss
@@ -47,18 +47,19 @@
       cursor: pointer;
       position: relative;
 
-      @mixin table-icons($class, $width, $right, $top) {
+      @mixin table-icons($class, $width, $right, $left, $top) {
         .todo__table__#{$class} {
           position: absolute;
           width: $width;
           right: $right;
+          left: $left;
           top: $top;
         }
       }
 
-      @include table-icons(sun, 18px, 43px, -2px);
-      @include table-icons(pin, 13px, 0, 0);
-      @include table-icons(ball, 13px, 13px, 2px);
+      @include table-icons(sun, 18px, null, 0, -2px);
+      @include table-icons(pin, 13px, 0, null, 0);
+      @include table-icons(ball, 13px, 13px, null, 2px);
     }
 
     &__data_choisen {
